--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- ? Main CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
@@ -27,216 +26,79 @@
     <!-- ? Favicon -->
     <link rel="icon" href="media/image/favicon.ico" type="image" />
     <title>Mswak</title>
-</head>
+  </head>
 
-<body>
-    <div class="mswak">
-        <!-- ملكش دعوة بدية يامجووووودي -->
-        <img src="./media/image/floating_img.png" alt="floating_img" class="floating_img">
-        <!-- ملكش دعوة بدية يامجووووودي -->
-        <div class="container">
-            <img src="./media/image/logo.png" class="mswak_img" alt="logo">
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-7 col-lg-6 col-12">
-                    <h1>في <p>المسواك</p> سلامتك هي اولوياتنا</h1>
-                    <p class="mswak_text">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من
-                        مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد
-                        الحروف التى يولدها التطبيق.</p>
-
-                    <!-- ربط دية واللي فوق يا اخو لان واحده للموبايل وواحده لللاب بس خد بالك ان في كلاس مختلف في mySwiper-->
-                    <!-- Swiper -->
-                    <div class="swiper mySwiper mobile_preview_swiper">
-                        <!-- ملكش دعوة بدية يامجووووودي -->
-                        <img src="./media/image/floating_circle.png" alt="floating_circle" class="floating_circle">
-                        <!-- ملكش دعوة بدية يامجووووودي -->
-
-                        <div class="swiper-wrapper">
-                            <!-- For loop this swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="./media/image/image.png" alt="swiper_img">
-                            </div>
-                            <!-- For loop this swiper-slide -->
-
-                            <!-- For loop this swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="./media/image/image.png" alt="swiper_img">
-                            </div>
-                            <!-- For loop this swiper-slide -->
-
-                            <!-- For loop this swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="./media/image/image.png" alt="swiper_img">
-                            </div>
-                            <!-- For loop this swiper-slide -->
-
-                            <!-- For loop this swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="./media/image/image.png" alt="swiper_img">
-                            </div>
-                            <!-- For loop this swiper-slide -->
-
-                            <!-- For loop this swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="./media/image/image.png" alt="swiper_img">
-                            </div>
-                            <!-- For loop this swiper-slide -->
-
-                        </div>
-                        <div class="swiper-pagination"></div>
-                    </div>
-                    <!-- ربط دية واللي فوق يا اخو لان واحده للموبايل وواحده لللاب بس خد بالك ان في كلاس مختلف في mySwiper-->
-
-                    <form action="" class="form_card_register">
-                        <div class="card_register">
-                            <div class="row">
-                                <div class="col-lg-4 col-12">
-                                    <div class="form-group">
-                                        <i class="fa-solid fa-user"></i>
-                                        <label for="">الاسم بالكامل</label>
-                                        <input type="text" name="" id="" class="form-control"
-                                            placeholder="الاسم بالكامل">
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-12">
-                                    <div class="form-group">
-                                        <i class="fa-solid fa-phone"></i>
-                                        <label for="">رقم الهاتف</label>
-                                        <input type="text" name="" id="" class="form-control" placeholder="رقم الهاتف">
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-12">
-                                    <div class="form-group">
-                                        <i class="fa-solid fa-stopwatch"></i>
-                                        <label for="">الوقت المُفضل</label>
-                                        <input type="text" name="" id="" class="form-control"
-                                            placeholder="الوقت المُفضل">
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-12">
-                                    <div class="form-group">
-                                        <i class="fa-solid fa-calendar"></i>
-                                        <label for="">الخدمة</label>
-                                        <select name="" id="" class="selectpicker form-control">
-                                            <option value="0">حشو اسنان</option>
-                                            <option value="1">حشو اسنان</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-12">
-                                    <div class="form-group">
-                                        <i class="fa-solid fa-user-doctor"></i>
-                                        <label for="">الطبيب</label>
-                                        <select name="" id="" class="selectpicker form-control">
-                                            <option value="0">حشو اسنان</option>
-                                            <option value="1">حشو اسنان</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-12">
-                                    <div class="form-group">
-                                        <i class="fa-solid fa-location-dot"></i>
-                                        <label for="">الفرع</label>
-                                        <select name="" id="" class="selectpicker form-control">
-                                            <option value="0">حشو اسنان</option>
-                                            <option value="1">حشو اسنان</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- ملكش دعوة بدية يامجووووودي -->
-                            <img src="./media/image/floating_circle.png" alt="floating_circle_bottom"
-                                class="floating_circle_bottom">
-                            <!-- ملكش دعوة بدية يامجووووودي -->
-                        </div>
-                        <button type="button" class="btn submit_btn" id="submit">تسجيل بياناتي</button>
-
-                        <script>
-                            document.getElementById('submit').onclick = function () {
-                                Swal.fire({
-                                    position: 'top-end',
-                                    icon: 'success',
-                                    title: 'تم ارسال البيانات بنجاح',
-                                    showConfirmButton: false,
-                                    timer: 3000
-                                })
-                            };
-                        </script>
-                    </form>
-                </div>
-                <div class="col-xl-5 col-lg-6 col-12">
-                    <!-- ربط دية واللي فوق يا اخو لان واحده للموبايل وواحده لللاب بس خد بالك ان في كلاس مختلف في mySwiper-->
-                    <!-- Swiper -->
-                    <div class="swiper mySwiper laptop_preview_swiper">
-                        <!-- ملكش دعوة بدية يامجووووودي -->
-                        <img src="./media/image/floating_circle.png" alt="floating_circle" class="floating_circle">
-                        <!-- ملكش دعوة بدية يامجووووودي -->
-
-                        <div class="swiper-wrapper">
-                            <!-- For loop this swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="./media/image/image.png" alt="swiper_img">
-                            </div>
-                            <!-- For loop this swiper-slide -->
-
-                            <!-- For loop this swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="./media/image/image.png" alt="swiper_img">
-                            </div>
-                            <!-- For loop this swiper-slide -->
-
-                            <!-- For loop this swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="./media/image/image.png" alt="swiper_img">
-                            </div>
-                            <!-- For loop this swiper-slide -->
-
-                            <!-- For loop this swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="./media/image/image.png" alt="swiper_img">
-                            </div>
-                            <!-- For loop this swiper-slide -->
-
-                            <!-- For loop this swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="./media/image/image.png" alt="swiper_img">
-                            </div>
-                            <!-- For loop this swiper-slide -->
-
-                        </div>
-                        <div class="swiper-pagination"></div>
-                    </div>
-                    <!-- ربط دية واللي فوق يا اخو لان واحده للموبايل وواحده لللاب بس خد بالك ان في كلاس مختلف في mySwiper-->
-                </div>
-            </div>
-        </div>
+  <body>
+    <div class="navbar-top">
+      <a href="mailto:almeswak.dental@gmail.com" class="email">
+        <i class="fa-regular fa-envelope"></i>almeswak.dental@gmail.com
+      </a>
+      <a href="#" class="url">Almeswak_dentist.com</a>
+      <a href="tel:+966251254255" class="phone"><i class="fa-solid fa-phone"></i>+966 2512 542 55</a>
     </div>
-    <!-- Initialize Swiper -->
-    <script>
-        var swiper = new Swiper(".mySwiper", {
-            slidesPerView: 1,
-            spaceBetween: 30,
-            loop: true,
-            mousewheel: true,
-            breakpoints: {
-                300: {
-                    direction: "horizontal",
-                },
-                768: {
-                    direction: "horizontal",
-                },
-                1024: {
-                    direction: "vertical",
-                },
-            },
-            pagination: {
-                el: ".swiper-pagination",
-                clickable: true,
-            },
-        });
-    </script>
-</body>
-
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <a class="navbar-brand" href="#"
+          ><img src="./media/image/logo.png" alt="logo" class="logo"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Us</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+              Medical Provider
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">test</a></li>
+                <li><a class="dropdown-item" href="#">test</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Training Academy</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                Library
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">test</a></li>
+                  <li><a class="dropdown-item" href="#">test</a></li>
+                </ul>
+              </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
