--- a/index.html
+++ b/index.html
@@ -164,35 +164,87 @@
       <video src="./media/video/header.mp4" muted autoplay loop></video>
       <div class="text_header">
         <h1>Miswak Medical Group welcomes you</h1>
-        <p>Book your appointment now with ease and we will contact you to confirm the appointment (open the file and check for free)</p>
+        <p>
+          Book your appointment now with ease and we will contact you to confirm
+          the appointment (open the file and check for free)
+        </p>
       </div>
-      
 
       <!-- offers header -->
-      <div class="offers_header">
-        <!-- Swiper -->
-    <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">Slide 1</div>
-        <div class="swiper-slide">Slide 2</div>
-        <div class="swiper-slide">Slide 3</div>
-      </div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-    </div>
+      <!-- <div class="offers_header">
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">Slide 1</div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+          </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+        </div>
 
-    <!-- Initialize Swiper -->
-    <script>
-      var swiper = new Swiper(".mySwiper", {
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
-        },
-      });
-    </script>
-      </div>
+        <script>
+          var swiper = new Swiper(".mySwiper", {
+            navigation: {
+              nextEl: ".swiper-button-next",
+              prevEl: ".swiper-button-prev",
+            },
+          });
+        </script>
+      </div> -->
     </section>
     <!-- End Header -->
+
+    <!-- Start reservation info -->
+    <section class="reservation_info">
+      <form class="container">
+        <h6>Reservation information</h6>
+        <div class="row">
+          <div class="col-lg-6 col-12">
+            <div class="form-group">
+              <select
+                name=""
+                id=""
+                class="form-control selectpicker"
+                title="Enter your area"
+              >
+                <option value="">test</option>
+                <option value="">test</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-lg-6 col-12">
+            <div class="form-group">
+              <select
+                name=""
+                id=""
+                class="form-control selectpicker"
+                title="Select service"
+              >
+                <option value="">test</option>
+                <option value="">test</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-lg-6 col-12">
+            <div class="form-group">
+              <select
+                name=""
+                id=""
+                class="form-control selectpicker"
+                title="Select Branch"
+              >
+                <option value="">test</option>
+                <option value="">test</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-lg-6 col-12">
+            <button type="submit" class="btn submit_btn">Search now</button>
+          </div>
+        </div>
+      </form>
+    </section>
+    <!-- End reservation info -->
 
     <!-- start footer section -->
     <footer>
