--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
             </li>
           </ul>
           <div class="auth">
-            <a href="#" class="signup_btn btn">Sign up</a>
-            <a href="#" class="login_btn btn">Login</a>
+            <a href="signup.html" class="signup_btn btn">Sign up</a>
+            <a href="login.html" class="login_btn btn">Login</a>
             <!-- start lang -->
             <div class="dropdown lang">
               <button
