--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- ? Main CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
-    <link rel="stylesheet" href="sass/style.css" />
+    <link rel="stylesheet" href="sass/style.min.css" />
     <link rel="stylesheet" href="css/bootstrap-select.min.css" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/sweet-alert.css" />
@@ -92,7 +92,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About Us</a>
@@ -199,7 +199,7 @@
       <form class="container">
         <h6>Reservation information</h6>
         <div class="row">
-          <div class="col-lg-6 col-12">
+          <div class="col-lg-6 col-md-6 col-12">
             <div class="form-group">
               <select
                 name=""
@@ -212,7 +212,7 @@
               </select>
             </div>
           </div>
-          <div class="col-lg-6 col-12">
+          <div class="col-lg-6 col-md-6 col-12">
             <div class="form-group">
               <select
                 name=""
@@ -225,7 +225,7 @@
               </select>
             </div>
           </div>
-          <div class="col-lg-6 col-12">
+          <div class="col-lg-6 col-md-6 col-12">
             <div class="form-group">
               <select
                 name=""
@@ -238,13 +238,244 @@
               </select>
             </div>
           </div>
-          <div class="col-lg-6 col-12">
+          <div class="col-lg-6 col-md-6 col-12">
             <button type="submit" class="btn submit_btn">Search now</button>
           </div>
         </div>
       </form>
     </section>
     <!-- End reservation info -->
+
+    <!-- Start services -->
+    <section class="services">
+      <div class="container">
+        <h2 class="title_head">Our services</h2>
+        <p class="text_section">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+          nonumy eirmod tempor invidunt ut labore et dolore magna
+        </p>
+        <div class="row">
+          <!-- For loop this card -->
+          <div class="col-lg-4 col-12">
+            <div class="card_service">
+              <img
+                class="img_card"
+                src="./media/image/service2.jpg"
+                alt="service"
+              />
+              <h5 class="title_card">Children's dentistry</h5>
+              <p class="text_card">
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                diam nonumy eirmod tempor invidunt ut labore et dolore magna,
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                diam nonumy eirmod tempor invidunt ut labore et dolore magna
+              </p>
+              <a href="#" class="btn">Book now</a>
+            </div>
+          </div>
+          <!-- For loop this card -->
+
+          <!-- For loop this card -->
+          <div class="col-lg-4 col-12">
+            <div class="card_service">
+              <img
+                class="img_card"
+                src="./media/image/service3.jpg"
+                alt="service"
+              />
+              <h5 class="title_card">Orthodontics</h5>
+              <p class="text_card">
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                diam nonumy eirmod tempor invidunt ut labore et dolore magna,
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                diam nonumy eirmod tempor invidunt ut labore et dolore magna
+              </p>
+              <a href="#" class="btn">Book now</a>
+            </div>
+          </div>
+          <!-- For loop this card -->
+
+          <!-- For loop this card -->
+          <div class="col-lg-4 col-12">
+            <div class="card_service">
+              <img
+                class="img_card"
+                src="./media/image/service1.jpg"
+                alt="service"
+              />
+              <h5 class="title_card">Dental medicine</h5>
+              <p class="text_card">
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                diam nonumy eirmod tempor invidunt ut labore et dolore magna,
+              </p>
+              <a href="#" class="btn">Book now</a>
+            </div>
+          </div>
+          <!-- For loop this card -->
+        </div>
+      </div>
+    </section>
+    <!-- End services -->
+
+    <!-- Start statistics -->
+    <section class="statistics">
+      <div class="container-fluid p-0">
+        <div class="row">
+          <!-- Start wonderful section -->
+          <div class="col-lg-6 col-12 p-0">
+            <div class="wonderful_section">
+              <h3 class="wonderful_title">The wonderful place for you</h3>
+              <p class="wonderful_text">Health care for your teeth</p>
+              <!-- Start statistics card -->
+              <div class="statistics_card">
+                <i class="fa-solid fa-location-dot"></i>
+                <div class="statistics_text">
+                  <p class="statistics_number">+<span class="counter">120</span>
+                  </p>
+                  <span class="statistics_object">branch</span>
+                </div>
+              </div>
+              <!-- End statistics card -->
+
+              <!-- Start statistics card -->
+              <div class="statistics_card">
+                <i class="fa-solid fa-user-doctor"></i>
+                <div class="statistics_text">
+                  <p class="statistics_number">+<span class="counter">950</span>
+                  </p>
+                  <span class="statistics_object">Specialized doctors</span>
+                </div>
+              </div>
+              <!-- End statistics card -->
+
+              <!-- Start statistics card -->
+              <div class="statistics_card">
+                <i class="fa-solid fa-hand-holding-heart"></i>
+                <div class="statistics_text">
+                  <p class="statistics_number">+<span class="counter">1,850,000</span>
+                  </p>
+                  <span class="statistics_object">Trusted patients</span>
+                </div>
+              </div>
+              <!-- End statistics card -->
+
+              <!-- Start statistics card -->
+              <div class="statistics_card">
+                <i class="fa-solid fa-tooth"></i>
+                <div class="statistics_text">
+                  <p class="statistics_number">+<span class="counter">1,500,000</span>
+                  </p>
+                  <span class="statistics_object">The surgery</span>
+                </div>
+              </div>
+              <!-- End statistics card -->
+            </div>
+          </div>
+          <!-- End wonderful section -->
+
+          <!-- Start Miswak Academy -->
+          <div class="col-lg-6 col-12 p-0">
+            <div class="miswak_academy">
+              <h3 class="title">Miswak Academy</h3>
+              <p class="text">Be part of the toothpick</p>
+              <img src="./media/image/tooth.png" alt="tooth">
+              <a href="#" class="join_btn btn">Join us</a>
+            </div>
+          </div>
+          <!-- End Miswak Academy -->
+        </div>
+      </div>
+    </section>
+    <!-- End statistics -->
+
+    <!-- Start Doctors -->
+    <section class="doctors">
+      <div class="container">
+        <div class="d-flex justify-content-between align-items-center">
+          <span class="sub_title">Miswak doctors</span>
+          <a href="#" class="btn show_all">Show all doctors</a>
+        </div>
+        <h2 class="title">Learn about our best dentists</h2>
+        <p class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+          nonumy eirmod tempor invidunt ut labore et dolore magna</p>
+          <!-- Start card doctor -->
+          <div class="card_doctor">
+            <img src="./media/image/doctors1.jpg" alt="doctors">
+            <div class="description_doctor">
+              <h5 class="title">DR. Ahmed Hawam</h5>
+              <span class="specialize">Sunni installations specialize</span>
+              <span class="address">Dammam Branch, Al -Mawda neighborhood, Aisha Street</span>
+              <div class="rating">
+                <i class="fa-solid fa-star active"></i>
+                <i class="fa-solid fa-star active"></i>
+                <i class="fa-solid fa-star active"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <a href="#" class="btn booking">Book now</a>
+            </div>
+          </div>
+          <!-- End card doctor -->
+
+          <!-- Start card doctor -->
+          <div class="card_doctor">
+            <img src="./media/image/doctors1.jpg" alt="doctors">
+            <div class="description_doctor">
+              <h5 class="title">DR. Ahmed Hawam</h5>
+              <span class="specialize">Sunni installations specialize</span>
+              <span class="address">Dammam Branch, Al -Mawda neighborhood, Aisha Street</span>
+              <div class="rating">
+                <i class="fa-solid fa-star active"></i>
+                <i class="fa-solid fa-star active"></i>
+                <i class="fa-solid fa-star active"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <a href="#" class="btn booking">Book now</a>
+            </div>
+          </div>
+          <!-- End card doctor -->
+
+          <!-- Start card doctor -->
+          <div class="card_doctor">
+            <img src="./media/image/doctors1.jpg" alt="doctors">
+            <div class="description_doctor">
+              <h5 class="title">DR. Ahmed Hawam</h5>
+              <span class="specialize">Sunni installations specialize</span>
+              <span class="address">Dammam Branch, Al -Mawda neighborhood, Aisha Street</span>
+              <div class="rating">
+                <i class="fa-solid fa-star active"></i>
+                <i class="fa-solid fa-star active"></i>
+                <i class="fa-solid fa-star active"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <a href="#" class="btn booking">Book now</a>
+            </div>
+          </div>
+          <!-- End card doctor -->
+
+          <!-- Start card doctor -->
+          <div class="card_doctor">
+            <img src="./media/image/doctors1.jpg" alt="doctors">
+            <div class="description_doctor">
+              <h5 class="title">DR. Ahmed Hawam</h5>
+              <span class="specialize">Sunni installations specialize</span>
+              <span class="address">Dammam Branch, Al -Mawda neighborhood, Aisha Street</span>
+              <div class="rating">
+                <i class="fa-solid fa-star active"></i>
+                <i class="fa-solid fa-star active"></i>
+                <i class="fa-solid fa-star active"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <a href="#" class="btn booking">Book now</a>
+            </div>
+          </div>
+          <!-- End card doctor -->
+      </div>
+    </section>
+    <!-- End Doctors -->
 
     <!-- start footer section -->
     <footer>
@@ -404,5 +635,15 @@
       </div>
     </footer>
     <!-- end footer section -->
+
+    <script src="js/main.js"></script>
+    <script src="js/counterup.min.js"></script>
+    <script src="js/waypoints.min.js"></script>
+    <script>
+      $(".counter").counterUp({
+        delay: 20,
+        time: 2000,
+      });
+    </script>
   </body>
 </html>
