--- a/about.html
+++ b/about.html
@@ -53,9 +53,18 @@
                 </div>
                 <!-- start col -->
                 <!-- start col -->
-                <div class="col-lg-6 col-12">
+                <div class="col-lg-3 col-6">
+
+                    <img class="main_img" src="media/image/about.png" alt="about">
+
+                </div>
+                <!-- start col -->
+
+                <!-- start col -->
+                <div class="col-lg-3 col-6">
                     <div class="coll_img">
-                        <img src="" alt="about">
+                        <img src="media/image/about3.png" alt="about">
+                        <img src="media/image/abour2.png" alt="about">
                     </div>
                 </div>
                 <!-- start col -->
@@ -65,21 +74,238 @@
     <!-- finish about us header -->
 
     <!-- start about us card -->
-       <section class="header_about_us">
+    <section class="aboutus_card">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-4 col-12">
-                    <div class="card">
-                        <img src="" alt="">
-                        <h6></h6>
-                        <p></p>
-                    </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <a href="service.html">
+                        <div class="service_box">
+                            <img src="media/image/aboutus1.png" alt="">
+                            <h5>Our Message </h5>
+                            <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <a href="service.html">
+                        <div class="service_box">
+                            <img src="media/image/aboutus2.png" alt="">
+                            <h5>Our Vision </h5>
+                            <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <a href="service.html">
+                        <div class="service_box">
+                            <img src="media/image/aboutus1.png" alt="">
+                            <h5>Our Value</h5>
+                            <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
-       </section>
+    </section>
     <!-- finish about us card -->
+    <!-- start about us counter -->
+    <section class="couner_aboutus"
+        style="background-image: url(media/image/back-join.png); background-position: center; background-size: cover;">
+        <div class="container boxes">
+            <div class="box">
+                <div class="img">
+                    <img src="media/image/counter1.png" alt="counter">
+                </div>
+                <div class="content">
+                    <i class="fa-solid fa-plus"></i>
+                    <div class="counter" data-target="200">200 </div>
+                    <h6 class="head_categ"> Branches
 
+                    </h6>
+                </div>
+
+            </div>
+            <div class="box">
+                <div class="img">
+                    <img src="media/image/counter2.png" alt="counter">
+                </div>
+                <div class="content">
+                    <i class="fa-solid fa-plus"></i>
+                    <div class="counter" data-target="400">400 </div>
+                    <h6 class="head_categ"> DEDICATED DOCTORS
+                    </h6>
+                </div>
+
+            </div>
+            <div class="box">
+                <div class="img">
+                    <img src="media/image/counter3.png" alt="counter">
+                </div>
+                <div class="content">
+                    <i class="fa-solid fa-plus"></i>
+                    <div class="counter" data-target="600"> 600 </div>
+                    <h6 class="head_categ"> Surgery</h6>
+                </div>
+
+            </div>
+            <div class="box">
+                <div class="img">
+                    <img src="media/image/counter4.png" alt="counter">
+                </div>
+                <div class="content">
+                    <i class="fa-solid fa-plus"></i>
+                    <div class="counter" data-target="600"> 600 </div>
+                    <h6 class="head_categ"> trusted patients
+                    </h6>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+    <!-- finish about us counter -->
+    <!-- start about us information -->
+    <section class="best_dector_aboutus">
+        <div class="container">
+            <div class="head">
+                <div class="main_content_start">
+                    <h2>Our Branches
+
+                    </h2>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
+                </div>
+                <div class="button">
+                    <a href="#" class="btn first"> View All Branches</a>
+                </div>
+            </div>
+            <div class="row">
+                <!-- start col -->
+                <div class="col-lg-6 col-12">
+                    <div class="card">
+                        <div class="row">
+
+                            <div class="col-4">
+                                <img src="media/image/branch2.png" alt="branch">
+                            </div>
+
+                            <div class="col-8">
+                                <div class="info">
+                                    <h6>Almaeswak Mekkah Branch</h6>
+                                    <p>Consultant of Oral Medicine and Cosmetic Dentistry and a Diploma in Cosmetic
+                                        Dentistry, University of Leeds, England</p>
+                                    <div class="rates">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                    </div>
+
+                                    <div class="connect_info">
+
+                                        <div class="list">
+                                            <i class="fa-solid fa-location-dot"></i>
+                                            <h6>ElDamam , Jasmine District , A2esha </h6>
+                                        </div>
+
+                                        <div class="list">
+                                            <i class="fa-solid fa-people-group"></i>
+                                            <h6><span>Doctors:</span> 80 </h6>
+                                        </div>
+
+                                        <div class="list">
+                                            <i class="fa-solid fa-money-bills"></i>
+                                            <h6><span>Fees:</span> Start From 250 SAR </h6>
+                                        </div>
+
+                                        <div class="list">
+                                            <i class="fa-solid fa-headphones"></i>
+                                            <h6>254529 </h6>
+                                        </div>
+
+
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- finish col -->
+
+                  <!-- start col -->
+                  <div class="col-lg-6 col-12">
+                    <div class="card">
+                        <div class="row">
+
+                            <div class="col-4">
+                                <img src="media/image/branch1.png" alt="branch">
+                            </div>
+
+                            <div class="col-8">
+                                <div class="info">
+                                    <h6>Almaeswak Mekkah Branch</h6>
+                                    <p>Consultant of Oral Medicine and Cosmetic Dentistry and a Diploma in Cosmetic
+                                        Dentistry, University of Leeds, England</p>
+                                    <div class="rates">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                    </div>
+
+                                    <div class="connect_info">
+
+                                        <div class="list">
+                                            <i class="fa-solid fa-location-dot"></i>
+                                            <h6>ElDamam , Jasmine District , A2esha </h6>
+                                        </div>
+
+                                        <div class="list">
+                                            <i class="fa-solid fa-people-group"></i>
+                                            <h6><span>Doctors:</span> 80 </h6>
+                                        </div>
+
+                                        <div class="list">
+                                            <i class="fa-solid fa-money-bills"></i>
+                                            <h6><span>Fees:</span> Start From 250 SAR </h6>
+                                        </div>
+
+                                        <div class="list">
+                                            <i class="fa-solid fa-headphones"></i>
+                                            <h6>254529 </h6>
+                                        </div>
+
+
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- finish col -->
+
+            </div>
+        </div>
+    </section>
+
+    <!-- finish about us information -->
+
+
+
+    <script src="js/main.js"></script>
+    <script src="js/counterup.min.js"></script>
+    <script src="js/waypoints.min.js"></script>
+    <script>
+        $(".counter").counterUp({
+            delay: 20,
+            time: 2000,
+        });
+    </script>
 </body>
 
 </html>
